--- a/templates/default_gmond.conf.j2
+++ b/templates/default_gmond.conf.j2
@@ -14,7 +14,7 @@ globals {
   cleanup_threshold = 500 /*secs */
   gexec = no
   send_metadata_interval = 20
-  {{ if hostname }} override_hostname = {{ hostname }}  {{ endif }}
+  {% if hostname %}override_hostname = {{ hostname }}{% endif %}
 }
 
 /* If a cluster attribute is specified, then all gmond hosts are wrapped inside
